--- a/src/app/modules/Accounting/JournalEntry/JournalEntry.component.html
+++ b/src/app/modules/Accounting/JournalEntry/JournalEntry.component.html
@@ -1,139 +1,136 @@
-<mat-card>
-    <mat-card-title>Vouchers</mat-card-title>
-    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content>
-        <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <alert></alert>
-        <!-- <form [formGroup]="searchForm">
-            <mat-form-field>
-                <mat-label>Class</mat-label>
-                <mat-select formControlName="searchClassId">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let item of Classes" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}</mat-option>
+<div style="padding:15px 15px 10px 15px;">
+    <div><strong>Journal Entry</strong></div>
+</div>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<alert></alert>
+<form [formGroup]="searchForm">
+    <!-- <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Posting Date</mat-label>
+        <input formControlName="searchPostingDate" matInput [matDatepicker]="searchPostingDate" autocomplete="off">
+        <mat-datepicker-toggle matSuffix [for]="searchPostingDate"></mat-datepicker-toggle>
+        <mat-datepicker #searchPostingDate></mat-datepicker>
+    </mat-form-field> -->
+    <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Account</mat-label>
+        <input type="text" matInput formControlName="searchGeneralLedgerId" [matAutocomplete]="auto">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                {{option.GeneralLedgerName}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+    <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Reference</mat-label>
+        <input type="text" matInput formControlName="searchReferenceId" [maxlength]="50" autocomplete="Off">        
+    </mat-form-field>
+    <mat-form-field appearance="outline" [style.width.px]="200">
+        <mat-label>Short Text</mat-label>
+        <input type="text" matInput formControlName="searchShortText" [maxlength]="250" autocomplete="Off">        
+    </mat-form-field>
+
+    <button [disabled]="loading" class="mat-raised-button" (click)="GetAccountingVoucher()">
+        <mat-icon>search</mat-icon>
+    </button>
+</form>
+
+<mat-table #table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="DocDate">
+        <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Doc Date
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <mat-label>Doc Date</mat-label>
+                <input [(ngModel)]="element.DocDate" [value]="element.DocDate" matInput [matDatepicker]="DocDate"
+                    autocomplete="off">
+                <mat-datepicker-toggle matSuffix [for]="DocDate"></mat-datepicker-toggle>
+                <mat-datepicker #DocDate></mat-datepicker>
+            </mat-form-field>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="PostingDate">
+        <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Posting Date
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <mat-label>Posting Date</mat-label>
+                <input [(ngModel)]="element.PostingDate" [value]="element.PostingDate" matInput
+                    [matDatepicker]="PostingDate" autocomplete="off">
+                <mat-datepicker-toggle matSuffix [for]="PostingDate"></mat-datepicker-toggle>
+                <mat-datepicker #PostingDate></mat-datepicker>
+            </mat-form-field>
+        </mat-cell>
+    </ng-container>
+    <!-- <ng-container matColumnDef="Reference">
+        <mat-header-cell *matHeaderCellDef> Reference </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <mat-label>Reference</mat-label>
+                <input matInput autocomplete="Off" [(ngModel)]="element.Reference" [value]="element.Reference">
+            </mat-form-field>
+        </mat-cell>
+    </ng-container> -->
+    <ng-container matColumnDef="GeneralLedgerAccountId">
+        <mat-header-cell *matHeaderCellDef> Account</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <mat-select [(ngModel)]="element.GeneralLedgerAccountId" [value]="element.GeneralLedgerAccountId">
+                    <mat-option *ngFor="let item of GeneralLedgers" [value]="item.GeneralLedgerId">
+                        {{item.GeneralLedgerName}}
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field [style.width.pc]="25">
-                <mat-label>Teacher</mat-label>
-                <input type="text" matInput formControlName="searchSubjectTeacherId" [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                    <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                        {{option.TeacherName}}
-                    </mat-option>
-                </mat-autocomplete>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="DebitCreditId">
+        <mat-header-cell *matHeaderCellDef> Debit</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="updateDebitCredit(element,$event)"
+                [checked]="element.DebitCreditId==0?true:false">
+            </mat-checkbox>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Amount">
+        <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <input matInput autocomplete="Off" 
+                [max]="1000000"
+                [(ngModel)]="element.Amount" [value]="element.Amount">
             </mat-form-field>
-            <button [disabled]="loading" class="mat-raised-button" (click)="GetClassSubjectTeacher()">
-                <mat-icon>search</mat-icon>
-            </button>            
-        </form> -->
-        <!-- "DocDate",
-        "PostingDate",
-        "Reference",
-        "GLAccountId",
-        "DebitCreditId",
-        "Amount",
-        "ShortText",
-        "Active", -->
-        <mat-table #table [dataSource]="dataSource">
+        </mat-cell>
+    </ng-container>
+    <!-- <ng-container matColumnDef="ShortText">
+        <mat-header-cell *matHeaderCellDef> Short Text </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-form-field appearance="outline">
+                <input matInput autocomplete="Off" [(ngModel)]="element.ShortText" [value]="element.ShortText">
+            </mat-form-field>
+        </mat-cell>
+    </ng-container> -->
+    <ng-container matColumnDef="Active">
+        <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                [checked]="element.Active==1?true:false">
+            </mat-checkbox>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Action">
+        <mat-header-cell *matHeaderCellDef>
+            <button [disabled]="loading || Permission=='read'" matTooltip="new item" class="mat-raised-button"
+                (click)="addnew('credit')" fxFlex="10">
+                <mat-icon>add</mat-icon>
+            </button>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
+            <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-mini-fab
+                (click)="UpdateOrSave(element)">
+                <mat-icon>save</mat-icon>
+            </button>
 
-            <ng-container matColumnDef="DocDate">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Doc Date
-                </mat-header-cell>
-                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    <mat-form-field appearance="outline" [style.width.px]="130">
-                        <mat-label>Doc Date</mat-label>
-                        <input [(ngModel)]="element.DocDate" [value]="element.DocDate" matInput
-                            [matDatepicker]="DocDate" autocomplete="off">
-                        <mat-datepicker-toggle matSuffix [for]="DocDate"></mat-datepicker-toggle>
-                        <mat-datepicker #DocDate></mat-datepicker>
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="PostingDate">
-                <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Posting Date
-                </mat-header-cell>
-                <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-                    <mat-form-field appearance="outline" [style.width.px]="130">
-                        <mat-label>Posting Date</mat-label>
-                        <input [(ngModel)]="element.PostingDate" [value]="element.PostingDate" matInput
-                            [matDatepicker]="PostingDate" autocomplete="off">
-                        <mat-datepicker-toggle matSuffix [for]="PostingDate"></mat-datepicker-toggle>
-                        <mat-datepicker #PostingDate></mat-datepicker>
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Reference">
-                <mat-header-cell *matHeaderCellDef> Reference </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-form-field  [style.width.px]="130">
-                        <mat-label>Reference</mat-label>
-                        <input matInput autocomplete="Off" [(ngModel)]="element.Reference"
-                            [value]="element.Reference">
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="GLAccountId">
-                <mat-header-cell *matHeaderCellDef> GL Accounts </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-form-field [style.width.px]="130">
-                        <mat-select [(ngModel)]="element.GLAccountId" [value]="element.GLAccountId">
-                            <mat-option [value]="0">GL Accounts</mat-option>
-                            <mat-option *ngFor="let item of GLAccounts" [value]="item.GLAccountId">{{item.GLAccount}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="DebitCreditId">
-                <mat-header-cell *matHeaderCellDef> Debit</mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateDebitCredit(element,$event)"
-                        [checked]="element.DebitCreditId==0?true:false">
-                    </mat-checkbox>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Amount">
-                <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-form-field [style.width.px]="130">
-                        <input matInput autocomplete="Off" [(ngModel)]="element.Amount" [value]="element.Amount">                            
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="ShortText">
-                <mat-header-cell *matHeaderCellDef> Short Text </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-form-field [style.width.px]="160">
-                        <input matInput autocomplete="Off" [(ngModel)]="element.ShortText" [value]="element.ShortText">                            
-                    </mat-form-field>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Active">
-                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                        [checked]="element.Active==1?true:false">
-                    </mat-checkbox>
-                </mat-cell>
-            </ng-container>
-            <ng-container matColumnDef="Action">
-                <mat-header-cell *matHeaderCellDef>
-                    <button [disabled]="loading || Permission=='read'" matTooltip="new item" class="mat-raised-button" (click)="addnew()"
-                        fxFlex="10">
-                        <mat-icon>add</mat-icon>
-                    </button>
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
-                        mat-mini-fab (click)="UpdateOrSave(element)">
-                        <mat-icon>save</mat-icon>
-                    </button>
-
-                </mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-        </mat-table>
-
-    </mat-card-content>
-</mat-card>
+        </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" style="align-items: baseline;"></mat-row>
+</mat-table>
