--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -24,9 +24,16 @@
             (click)="GetClassFee(StandardFilterWithBatchId,0)">
             <mat-icon>search</mat-icon>
         </button>
-        <button [disabled]="loading" matTooltip="copy from previous batch" class="mat-raised-button" (click)="CopyFromPreviousBatch()">
+        <button [disabled]="loading" matTooltip="copy from previous batch" 
+        style="margin-right: 15px;"
+        class="mat-raised-button" (click)="CopyFromPreviousBatch()">
             <mat-icon>copy_all</mat-icon>
-        </button><br>
+        </button>
+        <button [disabled]="loading" matTooltip="create invoice" class="mat-raised-button" style="margin-right: 15px;"
+            (click)="CreateInvoice()">
+            <mat-icon>receipt_long</mat-icon>
+        </button>
+        <br>
     </form>
 
     <mat-table #table [dataSource]="dataSource" matSort>
