--- a/src/app/modules/classes/feedefinition/feedefinition.component.scss
+++ b/src/app/modules/classes/feedefinition/feedefinition.component.scss
@@ -8,7 +8,7 @@ mat-form-field{
 .mat-column-Active,.mat-column-Action,.mat-column-AmountEditable{
     flex:0 0 100px;
 }
-.mat-column-FeeName,.mat-column-FeeCategoryId{
+.mat-column-FeeName,.mat-column-FeeCategoryId,.mat-column-FeeSubCategoryId{
    flex:0 0 150px;
 }
 .mat-column-Description{
