--- a/src/app/modules/schoolreports/chartreport/chartreport.component.html
+++ b/src/app/modules/schoolreports/chartreport/chartreport.component.html
@@ -15,21 +15,22 @@
   <!-- </div> -->
 </form>
 <div id="printSection">
-  <div style="margin:15px 15px 15px 0px;display: flex;flex-direction: row;height: 400px;width: 400px;"
-    class="chart-wrapper">
-    <div style="display: flex;flex-direction: column;min-width: 300px;">
+  <div style="margin:15px 15px 15px 0px;display: flex;flex-direction: row;height: 400px;">
+    <div style="display: flex;flex-direction: column;min-width: 300px;border:1px solid lightgray;padding: 15px;">
       <div style="display: flex;flex-direction: row;margin:15px 15px 15px 0px">
         <div style="margin-right: 15px;">Expected Amount for {{SelectedMonth}}:</div>
         <div> &#x20b9; {{ExpectedAmount}}</div>
       </div>
       <div style="display: flex;flex-direction: row;margin:0px 15px 15px 0px">
-        <div style="margin-right: 15px;">Receipt Amount for  {{SelectedMonth}}:</div>
+        <div style="margin-right: 15px;">Receipt Amount for {{SelectedMonth}}:</div>
         <div> &#x20b9; {{ReceiptAmount}}</div>
       </div>
     </div>
-    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
-      [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
-    </canvas>
+    <div style="padding:25px 0px 0px 15px; border: 1px solid lightgray;">
+      <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType"
+        [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+      </canvas>
+    </div>
   </div>
   <!-- <span fxLayout="row" fxLayoutAlign="center center">
   <button [disabled]="loading" matTooltip="print" printSectionId="printSection" [useExistingCss]="true" ngxPrint
