class student rollno generation modified

--- a/src/app/modules/schoolreports/chartreport/chartreport.component.html
+++ b/src/app/modules/schoolreports/chartreport/chartreport.component.html
@@ -16,14 +16,14 @@
 </form>
 <div id="printSection">
   <div style="margin:15px 15px 15px 0px;display: flex;flex-direction: row;height: 400px;">
-    <div style="display: flex;flex-direction: column;min-width: 300px;border:1px solid lightgray;padding: 15px;">
-      <div style="display: flex;flex-direction: row;margin:15px 15px 15px 0px">
+    <div style="display: flex;flex-direction: column;min-width: 300px;border:1px solid lightgray;margin-right: 15px;">
+      <div style="display: flex;flex-direction: row;margin:25px 15px 0px 15px;justify-content: space-between;">
         <div style="margin-right: 15px;">Expected Amount for {{SelectedMonth}}:</div>
         <div> &#x20b9; {{ExpectedAmount}}</div>
       </div>
-      <div style="display: flex;flex-direction: row;margin:0px 15px 15px 0px">
+      <div style="display: flex;flex-direction: row;margin:15px;justify-content: space-between;">
         <div style="margin-right: 15px;">Receipt Amount for {{SelectedMonth}}:</div>
-        <div> &#x20b9; {{ReceiptAmount}}</div>
+        <div style="align-items: flex-end;"> &#x20b9; {{ReceiptAmount}}</div>
       </div>
     </div>
     <div style="padding:25px 0px 0px 15px; border: 1px solid lightgray;">
