--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -1,6 +1,16 @@
 mat-form-field,button{
     margin-right: 15px;
 }
-.mat-column-Promote{
+.mat-column-StudentId{
+    flex:1 1 70px;
+}
+.mat-column-Active,.mat-column-Action{
     justify-content: center;
+    flex:1 1 100px;
+}
+.mat-column-StudentName,.mat-column-FeeTypeId,.mat-column-RollNo,.mat-column-SectionId{
+    flex: 1 1 150px;
+}
+.mat-cell:first-of-type{
+    margin-left: 0px;
 }
