--- a/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
+++ b/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.html
@@ -29,18 +29,27 @@
         </button>
     </form>
     Subject can be assigned to student defined in student class.
-    <mat-table #table [dataSource]="dataSource" style="min-width: 1200px;">
+    <mat-table #table [dataSource]="dataSource" style="min-width: 1200px;" matSort>
         <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-            <mat-header-cell *matHeaderCellDef>{{disCol!='Action'?disCol:''}}
-                <div *ngIf="StudentSubjectList.length>0" fxLayoutAlign="center center">
-                    <span *ngIf="disCol=='Action'">Select&nbsp;</span>
-                    <mat-checkbox fxLayoutAlign="center center" matTooltip="select all" *ngIf="disCol=='Action'"
-                        (click)="$event.stopPropagation()" (change)="SelectAll($event)">
-                    </mat-checkbox>
-                    <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
-                        matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
-                        <mat-icon>all_out</mat-icon>
-                    </button>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+                <div style="display: flex;flex-direction: column;">
+                    <span style="display: flex;justify-content: start;">{{disCol!='Action'?disCol:''}}</span>
+                    <div *ngIf="StudentSubjectList.length>0" fxLayoutAlign="center center">
+                        <span *ngIf="disCol=='Student'">
+                            <mat-form-field style="width: 150px;">
+                                <mat-label>Search</mat-label>
+                                <input matInput [formControl]="nameFilter" autocomplete="Off">
+                            </mat-form-field>
+                        </span>
+                        <span *ngIf="disCol=='Action'">Select&nbsp;</span>
+                        <mat-checkbox fxLayoutAlign="center center" matTooltip="select all" *ngIf="disCol=='Action'"
+                            (click)="$event.stopPropagation()" (change)="SelectAll($event)">
+                        </mat-checkbox>
+                        <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
+                            matTooltip="save all" mat-mini-fab (click)="UpdateAll()">
+                            <mat-icon>all_out</mat-icon>
+                        </button>
+                    </div>
                 </div>
             </mat-header-cell>
             <mat-cell *matCellDef="let element ">
@@ -49,8 +58,8 @@
                     [checked]="element[disCol]==1?true:false">
                 </mat-checkbox>
                 <div fxLayout="column" fxLayoutAlign="center end">
-                    <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save"
-                        mat-mini-fab (click)="SaveRow(element)">
+                    <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read' || !element.Action"
+                        matTooltip="save" mat-mini-fab (click)="SaveRow(element)">
                         <mat-icon>save</mat-icon>
                     </button>
                 </div>
@@ -61,5 +70,5 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     </mat-table>
-
+    <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
 </div>
