--- a/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
+++ b/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
@@ -5,8 +5,8 @@
        
         <div style="padding: 15px 10px 2px 15px;height: 55px;">
             <mat-radio-group formControlName="PaidNotPaid">
-                <mat-radio-button class="example-margin" value="Paid">Paid</mat-radio-button>&nbsp;
-                <mat-radio-button class="example-margin" [checked]="true" value="NotPaid">Not Paid</mat-radio-button>
+                <mat-radio-button class="example-margin" checked="false" value="Paid">Paid</mat-radio-button>&nbsp;
+                <mat-radio-button class="example-margin" checked="true" value="NotPaid">Not Paid</mat-radio-button>
             </mat-radio-group>
         </div>
         <mat-form-field [style.width.px]="250" appearance="outline" style="margin-right: 15px;">
@@ -16,7 +16,7 @@
                 <mat-option *ngFor="let item of Months" [value]="item.val">{{item.MonthName}}</mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-form-field [style.width.px]="250" appearance="outline">
+        <!-- <mat-form-field [style.width.px]="250" appearance="outline">
             <mat-label>Name-class-section-roll no</mat-label>
             <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
             <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -24,7 +24,7 @@
                     {{option.Name}}
                 </mat-option>
             </mat-autocomplete>
-        </mat-form-field>
+        </mat-form-field> -->
         <!-- <mat-form-field appearance="outline">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
@@ -51,7 +51,7 @@
 <div>
     <mat-table #table [dataSource]="dataSource" style="overflow: auto;" matSort>
         <ng-container matColumnDef="RollNo">
-            <mat-header-cell *matHeaderCellDef> Roll No. </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Roll No. </mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.RollNo}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="Name">
@@ -61,17 +61,17 @@
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="ClassRollNoSection">
-            <mat-header-cell *matHeaderCellDef> Class </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 {{element.ClassRollNoSection}}
             </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="MonthName">
+        <!-- <ng-container matColumnDef="MonthName">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Paid Till </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 {{element.MonthName}}
             </mat-cell>
-        </ng-container>
+        </ng-container> -->
         <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
         </mat-row>
