--- a/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
+++ b/src/app/shared/components/mat-confirm-dialog/mat-confirm-dialog.component.html
@@ -1,15 +1,8 @@
-<div>
-    <div class="content-container">
-        <mat-icon id="close-icon" (click)="closedialog()">close</mat-icon>
-        <span class="content-span full-width">{{data.message}}</span>
-    </div>
-    <div class="grid">        
-            <!-- <div class="column"> -->
-                <button [disabled]="loading" class="mat-flat-button" [mat-dialog-close]="false" id="no-button">No</button>
-            <!-- </div>
-            <div class="column"> -->
-                <button [disabled]="loading" class="mat-flat-button" [mat-dialog-close]="true" id="yes-button">Yes</button>
-            <!-- </div> -->
-        
-    </div>
+<h1 mat-dialog-title>{{data.title}}</h1>
+<div mat-dialog-content>
+  {{data.message}}
+</div>
+<div style="float:right;margin:20px;">
+  <input style="margin:0px 10px;" type="button" value="Confirm" [mat-dialog-close]="true">
+  <input type="button" value="Cancel"  [mat-dialog-close]="false">
 </div>
