--- a/src/styles.scss
+++ b/src/styles.scss
@@ -131,3 +131,5 @@ input[type="radio"] {
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
